<resources>
    <string name="app_name">FeedMeRss</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Loading</string>
    <string name="auth_failed">Authorization Failed</string>
    <string name="settings">Settings</string>
    <string name="add_custom_rss">Add Custom RSS Feed</string>
    <string name="manage_custom_rss">Manage Custom RSS Feed</string>
    <string name="help">Help</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="health">Health</string>
    <string name="example">Example</string>
    <string name="upload">Upload</string>
    <string name="error">Error</string>
    <string name="Health">Health</string>
    <string name="Sports">Sports</string>
    <string name="Films">Films</string>
    <string name="Finance">Finance</string>
    <string name="Politics">Politics</string>
    <string name="Weather">Weather</string>
    <string name="Lifestyle">Lifestyle</string>
    <string name="Theatre">Theatre</string>
    <string name="Travel">Travel</string>
    <string name="Animals">Animals</string>
    <string name="Save">Save</string>
    <string name="Select_Basic_Rss_Feed">Select Basic Rss Feed</string>
    <string name="accept">Accept</string>
    <string name="added_rss_link">Successfully set default RSS link : </string>
    <string name="insert_rss_link">Please insert RSS link</string>
    <string name="insert_image_name">Please insert Image name</string>
    <string name="Set_Default_RSS_Feed">Set Default RSS Feed</string>
    <string name="error_didnt_find">Didn\'t find a default RSS Feed used Health Feed</string>
    <string name="error_db_set_feed">There was an error with the Database used Health Feed as Default</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="getlink">Copy Link</string>
    <string name="selectaction">Select Action</string>
    <string name="delete_successful">Delete Successful</string>
    <string name="presslong">Long press for more options</string>
    <string name="gotlink">Successfully copied Image Link</string>
    <string name="HelpMessage">This is an app to check your favorite topics through RSS Feeds. Just select the Feeds you want, from a great variety of subjects, open the sidebar and select the topic. You can also set the default RSS Feed. Furthermore there is the option to upload images to your personal account and be able to share them by copying the image’s link by long pressing the image and share it with your friends.But do not forget this is an online app so all your settings will be binded to your account no matter the device you use. We would like to hear your feedback ,you can contact us at FeedMeRSS@gmail.com.</string>
    <string-array name="Default_array">
        <item>Health</item>
        <item>Sports</item>
        <item>Films</item>
        <item>Finance</item>
        <item>Politics</item>
        <item>Weather</item>
        <item>Lifestyle</item>
        <item>Theatre</item>
        <item>Travel</item>
        <item>Animals</item>
    </string-array>
    <string name="Theater">Theater</string>

</resources>
