<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <include
        android:id="@+id/custom_actionbar"
        layout="@layout/custom_actionbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.feedmerss.lidlproduction.feedmerss.Login">


            <ImageView
                android:id="@+id/IVLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/feedmerss" />

            <TextView
                android:id="@+id/TVEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/IVLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/ETEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TVEmail"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/TVPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ETEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/ETPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TVPassword"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/BTSign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ETPassword"
                android:layout_marginTop="80dp"
                android:layout_toStartOf="@+id/TVEmail"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/BTCreate_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/ETPassword"
                android:layout_marginTop="80dp"
                android:layout_toEndOf="@+id/TVEmail"
                android:text="@string/create_account" />
        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
